(add new changes on top of this file)

Änderungen
----------

v0.14.5 (??.??.2014)
 * Preprocess hooks for doInsert, doUpdate and doDelete in the DB util.

v0.14.4 (06.11.2014)
 * Support for label markers with salutation suffix.
In HTML template: ###LABEL_GREETING###
in language file: 
 label_greeting_informal = Hello guys!
 label_greeting_formal = Good day, Sir!
Configure salutation in plugin config:
plugin.tx_myplugin.salutation = formal
 * Fixed some FAL issues and enhanced support.
 * New XmlElement class for better XML parsing.
 * New wrapper method tx_rnbase::makeInstanceService()
 * New wrapper method tx_rnbase_util_Strings::getRandomHexString().

v0.14.3 (07.10.2014)
 * To avoid caching an USER-Plugin, it can now easily converted to USER_INT by calling $this->getConfigurations()->convertToUserInt(). Thanks to Michael Wagner! 
 * Action can now be skipped with the Skip Exception. Thanks to Michael Wagner!
 * New subtemplate parsing. Thanks to Michael Wagner!
 * Bugfix for Modulemarkers. Modulemarkers and Labels can now contain a Minus (-). Thanks to Michael Wagner!
 * Metadata for FAL to mediamodel added. Thanks to Hannes Bochmann!
 * UserTS For BE-Modules added.
 
 
v0.14.2 (06.09.2014)
 * New method model_Base::setTableName(). Thanks to Christian Riesche!
 * Support for attachments in tx_rnbase_util_Mail. Works for T3 versions < 4.5 
 * basic data model with generic getters, setters. Thanks to Michael Wagner!
 * New label debug in BaseMarker.

v0.14.1 (26.04.2014)
 * Changes to apply code conventions

v0.14.0 (19.04.2014) (not released)
 * Support for TYPO3 6.2
 * Better localization support. Thanks to Hannes Bochmann!
 * New TS-Option links.linkid.applyHtmlSpecialChars to mask special characters. Default is false. Thanks to Michael Wagner!
 * PageBrowser with more setters
 * Bugfix in BE-Lister. Thanks to Thomas Reuleke!

v0.13.6 (10.02.2014) (not released)
 * Default dummy button in BE module